<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".algorithms">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="70dp"
        android:layout_height="668dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdvncAlgo"
        android:layout_width="165dp"
        android:layout_height="49dp"
        android:background="@drawable/button_drawable"
        android:text="@string/advanced"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBgnrAlgo"
        android:layout_width="165dp"
        android:layout_height="49dp"
        android:background="@drawable/button_drawable"
        android:text="@string/beginner"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout12"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIntmdAlgo"
        android:layout_width="165dp"
        android:layout_height="49dp"
        android:background="@drawable/button_drawable"
        android:text="@string/intermediate"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="73dp"
        android:layout_height="675dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <TextView
        android:id="@+id/txtDiff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="Choose A Difficulty"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="266dp"
        android:layout_height="63dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="269dp"
        android:layout_height="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="266dp"
        android:layout_height="31dp"
        android:layout_marginStart="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>